BaseName type
Summary:
Use `BaseName` type to pass base name in Buck code (was `String` previously).

String is weakly typed and makes code harder to work with. In particular, when I converted to `BaseName` type I have found an issue with `Query.baseName` (it could contain incorrect base name).

`BaseName` is just a wrapper around `ForwardRelativePath`.

Note this diff also saves a couple round trips to string and back to path.

Kotlin linter complains, I don't know how to mute it.

Note `UnconfiguredBuildTarget` still stores `ForwardRelativePath`, not `BaseName`; `BaseName` is used only to pass path, but not to store.

Reviewed By: bobyangyf

shipit-source-id: caadc624af