@@ -26,8 +26,10 @@ import static org.junit.Assert.fail;
 import com.facebook.buck.core.cell.CellPathResolver;
 import com.facebook.buck.core.cell.TestCellPathResolver;
 import com.facebook.buck.core.exceptions.BuildTargetParseException;
+import com.facebook.buck.core.model.BaseName;
 import com.facebook.buck.core.model.InternalFlavor;
 import com.facebook.buck.core.model.UnconfiguredBuildTargetView;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.parser.exceptions.NoSuchBuildTargetException;
 import com.google.common.collect.ImmutableMap;
 import java.nio.file.Path;
@@ -46,21 +48,20 @@ public class BuildTargetParserTest {
   public void testParseRootRule() {
     // Parse "//:fb4a" with the BuildTargetParser and test all of its observers.
     UnconfiguredBuildTargetView buildTarget =
-        parser.parse(createCellRoots(null), "//:fb4a", "", false);
+        parser.parse(createCellRoots(null), "//:fb4a", null, false);
     assertEquals("fb4a", buildTarget.getShortNameAndFlavorPostfix());
-    assertEquals("//", buildTarget.getBaseName());
-    assertEquals(
-        Paths.get(""), buildTarget.getCellRelativeBasePath().getPath().toPathDefaultFileSystem());
+    assertEquals("//", buildTarget.getBaseName().toString());
+    assertEquals(ForwardRelativePath.of(""), buildTarget.getCellRelativeBasePath().getPath());
     assertEquals("//:fb4a", buildTarget.getFullyQualifiedName());
   }
 
   @Test
   public void testParseRuleWithFlavors() {
     UnconfiguredBuildTargetView buildTarget =
-        parser.parse(createCellRoots(null), "//:lib#foo,bar", "", false);
+        parser.parse(createCellRoots(null), "//:lib#foo,bar", null, false);
     // Note the sort order.
     assertEquals("lib#bar,foo", buildTarget.getShortNameAndFlavorPostfix());
-    assertEquals("//", buildTarget.getBaseName());
+    assertEquals("//", buildTarget.getBaseName().toString());
     assertEquals(
         Paths.get(""), buildTarget.getCellRelativeBasePath().getPath().toPathDefaultFileSystem());
     // Note the sort order.
@@ -72,9 +73,9 @@ public class BuildTargetParserTest {
   @Test
   public void testParseValidTargetWithDots() {
     UnconfiguredBuildTargetView buildTarget =
-        parser.parse(createCellRoots(null), "//..a/b../a...b:assets", "", false);
+        parser.parse(createCellRoots(null), "//..a/b../a...b:assets", null, false);
     assertEquals("assets", buildTarget.getShortNameAndFlavorPostfix());
-    assertEquals("//..a/b../a...b", buildTarget.getBaseName());
+    assertEquals("//..a/b../a...b", buildTarget.getBaseName().toString());
     assertEquals(
         Paths.get("..a", "b..", "a...b"),
         buildTarget.getCellRelativeBasePath().getPath().toPathDefaultFileSystem());
@@ -84,39 +85,35 @@ public class BuildTargetParserTest {
   @Test
   public void testParsePathWithDot() {
     exception.expect(BuildTargetParseException.class);
-    exception.expectMessage(" . ");
-    exception.expectMessage("(found //.:assets)");
-    parser.parse(createCellRoots(null), "//.:assets", "", false);
+    exception.expectMessage("incorrect base name: //..");
+    parser.parse(createCellRoots(null), "//.:assets", null, false);
   }
 
   @Test
   public void testParsePathWithDotDot() {
     exception.expect(BuildTargetParseException.class);
-    exception.expectMessage(" .. ");
-    exception.expectMessage("(found //../facebookorca:assets)");
-    parser.parse(createCellRoots(null), "//../facebookorca:assets", "", false);
+    exception.expectMessage("incorrect base name: //../facebookorca");
+    parser.parse(createCellRoots(null), "//../facebookorca:assets", null, false);
   }
 
   @Test
   public void testParseAbsolutePath() {
     exception.expect(BuildTargetParseException.class);
-    exception.expectMessage("absolute");
-    exception.expectMessage("(found ///facebookorca:assets)");
-    parser.parse(createCellRoots(null), "///facebookorca:assets", "", false);
+    exception.expectMessage("incorrect base name: ///facebookorca");
+    parser.parse(createCellRoots(null), "///facebookorca:assets", null, false);
   }
 
   @Test
   public void testParseDoubleSlashPath() {
     exception.expect(BuildTargetParseException.class);
-    exception.expectMessage("//");
-    exception.expectMessage("(found //facebook//orca:assets)");
-    parser.parse(createCellRoots(null), "//facebook//orca:assets", "", false);
+    exception.expectMessage("incorrect base name: //facebook//orca");
+    parser.parse(createCellRoots(null), "//facebook//orca:assets", null, false);
   }
 
   @Test
   public void testParseTrailingColon() {
     try {
-      parser.parse(createCellRoots(null), "//facebook/orca:assets:", "", false);
+      parser.parse(createCellRoots(null), "//facebook/orca:assets:", null, false);
       fail("parse() should throw an exception");
     } catch (BuildTargetParseException e) {
       assertEquals("//facebook/orca:assets: cannot end with a colon", e.getMessage());
@@ -126,7 +123,7 @@ public class BuildTargetParserTest {
   @Test
   public void testParseNoColon() {
     try {
-      parser.parse(createCellRoots(null), "//facebook/orca/assets", "", false);
+      parser.parse(createCellRoots(null), "//facebook/orca/assets", null, false);
       fail("parse() should throw an exception");
     } catch (BuildTargetParseException e) {
       assertEquals(
@@ -137,7 +134,7 @@ public class BuildTargetParserTest {
   @Test
   public void testParseMultipleColons() {
     try {
-      parser.parse(createCellRoots(null), "//facebook:orca:assets", "", false);
+      parser.parse(createCellRoots(null), "//facebook:orca:assets", null, false);
       fail("parse() should throw an exception");
     } catch (BuildTargetParseException e) {
       assertEquals(
@@ -148,35 +145,34 @@ public class BuildTargetParserTest {
   @Test
   public void testSlashBeforeColon() {
     try {
-      parser.parse(createCellRoots(null), "//facebook/:orca", "", false);
+      parser.parse(createCellRoots(null), "//facebook/:orca", null, false);
       fail("parse() should throw an exception");
     } catch (BuildTargetParseException e) {
       assertEquals(
-          "When parsing //facebook/:orca: Non-empty target path //facebook/:orca must not end with slash.",
-          e.getMessage());
+          "When parsing //facebook/:orca: incorrect base name: //facebook/.", e.getMessage());
     }
   }
 
   @Test
   public void testParseFullyQualified() {
     UnconfiguredBuildTargetView buildTarget =
-        parser.parse(createCellRoots(null), "//facebook/orca:assets", "", false);
-    assertEquals("//facebook/orca", buildTarget.getBaseName());
+        parser.parse(createCellRoots(null), "//facebook/orca:assets", null, false);
+    assertEquals("//facebook/orca", buildTarget.getBaseName().toString());
     assertEquals("assets", buildTarget.getShortNameAndFlavorPostfix());
   }
 
   @Test
   public void testParseBuildFile() {
     UnconfiguredBuildTargetView buildTarget =
-        parser.parse(createCellRoots(null), ":assets", "//facebook/orca", false);
-    assertEquals("//facebook/orca", buildTarget.getBaseName());
+        parser.parse(createCellRoots(null), ":assets", BaseName.of("//facebook/orca"), false);
+    assertEquals("//facebook/orca", buildTarget.getBaseName().toString());
     assertEquals("assets", buildTarget.getShortNameAndFlavorPostfix());
   }
 
   @Test
   public void testParseWithVisibilityContext() {
     UnconfiguredBuildTargetView target =
-        parser.parse(createCellRoots(null), "//java/com/example:", "", true);
+        parser.parse(createCellRoots(null), "//java/com/example:", null, true);
     assertEquals(
         "A build target that ends with a colon should be treated as a wildcard build target "
             + "when parsed in the context of a visibility argument.",
@@ -192,7 +188,7 @@ public class BuildTargetParserTest {
             Paths.get("/opt/local/rootcell"), ImmutableMap.of("localreponame", localRepoRoot));
     String targetStr = "localreponame//foo/bar:baz";
 
-    UnconfiguredBuildTargetView buildTarget = parser.parse(cellRoots, targetStr, "", false);
+    UnconfiguredBuildTargetView buildTarget = parser.parse(cellRoots, targetStr, null, false);
     assertEquals("localreponame//foo/bar:baz", buildTarget.getFullyQualifiedName());
     assertTrue(buildTarget.getCell().getLegacyName().isPresent());
     assertEquals("localreponame", buildTarget.getCell().getName());
@@ -206,7 +202,7 @@ public class BuildTargetParserTest {
             Paths.get("/opt/local/rootcell"), ImmutableMap.of("localreponame", localRepoRoot));
     String targetStr = "@localreponame//foo/bar:baz";
 
-    UnconfiguredBuildTargetView buildTarget = parser.parse(cellRoots, targetStr, "", false);
+    UnconfiguredBuildTargetView buildTarget = parser.parse(cellRoots, targetStr, null, false);
     assertEquals("localreponame//foo/bar:baz", buildTarget.getFullyQualifiedName());
     assertTrue(buildTarget.getCell().getLegacyName().isPresent());
     assertEquals("localreponame", buildTarget.getCell().getName());
@@ -216,15 +212,15 @@ public class BuildTargetParserTest {
   public void testParseFailsWithRepoNameAndRelativeTarget() throws NoSuchBuildTargetException {
     exception.expect(BuildTargetParseException.class);
     String invalidTargetStr = "myRepo:baz";
-    parser.parse(createCellRoots(null), invalidTargetStr, "", false);
+    parser.parse(createCellRoots(null), invalidTargetStr, null, false);
   }
 
   @Test
   public void testParseWithBackslash() {
+    exception.expect(BuildTargetParseException.class);
+    exception.expectMessage("incorrect base name: //com\\microsoft\\windows");
     String backslashStr = "//com\\microsoft\\windows:something";
-    UnconfiguredBuildTargetView buildTarget =
-        parser.parse(createCellRoots(null), backslashStr, "", false);
-    assertEquals("//com/microsoft/windows", buildTarget.getBaseName());
+    parser.parse(createCellRoots(null), backslashStr, null, false);
   }
 
   @Test
@@ -241,6 +237,6 @@ public class BuildTargetParserTest {
     exception.expectMessage("Unknown cell: lclreponame");
     // And the suggestion
     exception.expectMessage("localreponame");
-    parser.parse(cellRoots, "lclreponame//facebook/orca:assets", "", false);
+    parser.parse(cellRoots, "lclreponame//facebook/orca:assets", null, false);
   }
 }
